--- a/semana_03/aula02/Style.css
+++ b/semana_03/aula02/Style.css
@@ -1,40 +1,34 @@
-*{
-    margin: 0;
+* {
     padding: 0;
+    margin: 0;
     box-sizing: border-box;
 }
-body{
+
+body {
     background-color: #f4f4f4;
-    font-family: Arial, Helvetica, sans-serif;
     text-align: center;
+    font-family: cursive;
+    padding: 30px;
 }
-.container{
-    background-color:white;
-    width: 70%;
-    border-radius: 10px;
-    padding: 20px;
-    margin: 20px auto;
-    box-shadow: 0 10px 15px rgba(0, 0, 0, 1);
+
+h1 {
+    color: #333333;
 }
-.container button {
-    padding: 10px 15px;
-    background-color: #007bff;
-    color: #ffffff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    width: 20%;
-}
-.container input {
-    padding: 10px 15px;
-    width: 70%;
+
+input,
+button {
+    padding: 10px;
+    margin: 10px;
+    font-size: 16px;
     border-radius: 5px;
 }
-.chart-container{
+
+.chart-container {
     width: 80%;
     max-width: 700px;
     margin: 20px auto;
-    background-color: aquamarine;
+    background-color: #ffffff;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
-
-
